--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+  position: relative;
+  color: #181717;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #181717;
+}
+
+a:not(.active)::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  background-color: #181717;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+a:hover::before {
+  transform: scaleX(1);
+}
+
+a.active {
+  border-bottom: 2px solid black;
+  padding-bottom: 4px;
+}
