--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  background-color: #E5E5E5;
+}
+
+body {
+  margin: 0 auto;
+  max-width: 1600px;
+}
+
 a {
   position: relative;
   color: #181717;
@@ -32,8 +41,23 @@ a:hover::before {
 }
 
 a.active {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #181717;
   padding-bottom: 4px;
+}
+
+.divided {
+  border-top: 2px solid #c3c3c3;
+}
+
+#arrow {
+  transform: rotate(-90deg);
+  position: absolute;
+  left: 165px;
+  bottom: 23px;
+}
+
+input[type='text'], textarea {
+  background-color: #E5E5E5;
 }
 
 ::-webkit-scrollbar {display:none;}
